welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:29: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:32: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:35: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:38: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:41: error: Unmatched closing brace '}' ignored here
}
^